# tmobile-splitwise-agent

./: .gitignore  README.md  pyproject.toml
agent/: config_helper.py  data_models.py  llm_client.py  main.py  oauth2_flow.py  splitwise_client.py  tmobile_bill_parser.py
tmobile_splitwise/: config_helper.py  data_models.py  llm_client.py  main.py  tmobile_bill_parser.py
