[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tmobile-splitwise-agent"
version = "0.1.0"
description = "AI agent that parses T-Mobile PDF bills and posts expenses to Splitwise"
authors = [{ name = "Vivek Kumar", email = "vivek.ispat@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Core runtime dependencies
dependencies = [
    "openai>=2.9.0",        # LLM client (structured JSON output)
    "pydantic>=2.12.5",     # Strict validation of parsed bills
    "PyPDF2>=3.0.1",        # Simple PDF → text extraction
    "python-dotenv>=1.2.1", # Load secrets from .env
    "pyyaml>=6.0.3",        # Config file parsing
    "splitwise>=3.0.0",     # Splitwise Python SDK (API key auth + expense posting)
    "requests>=2.32.5",     # Fallback HTTP calls if needed
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",  # Unit testing
    "black>=25.12.0", # Code formatting
    "ruff>=0.14.8",   # Linting
    "mypy>=1.19.0",   # Static typing
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"] # Error, Formatting, Imports
ignore = ["E501"]        # Ignore long line warnings (Black handles wrapping)

[tool.setuptools.packages.find]
include = ["tmobile_splitwise*"]
exclude = ["private*", "tests*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
